syntax = "proto3";
import "record.proto";
import "address.proto";

package com.blue.proto;

/*
 * 1. worker -> master
 * Worker sends the request in order to register itself to the master.
 */

message RegisterRequest {
  Address address = 1;
  repeated Record samples = 2;
}

message RegisterResponse {
  Address address = 1;
}
