syntax = "proto3";
import "record.proto";
import "register.proto";
import "distribute.proto";
import "sort.proto";

package com.blue.proto;

service Worker {
  rpc DistributeStart(DistributeStartRequest) returns (DistributeStartResponse);
  rpc Distribute(DistributeRequest) returns (DistributeResponse);
  rpc SortStart(SortStartRequest) returns (SortStartResponse);
}
